# bar_payment_service

./: .gitignore  README.md  env.py  pyproject.toml
database/: prices.json
src/bar_payment_service/: app.py  bar_analytics.py  db.py
src/bar_payment_service/routes/: __init__.py  confirm_order.py  index.py
src/bar_payment_service/static/: cart.js  cart_page.js  confirm_page.js  style.css
src/bar_payment_service/static/cart/: cart_render.js  cart_utils.js
src/bar_payment_service/templates/: confirm_order.html  confirmed.html  index.html
src/db_handling/: __init__.py  db_config.py  db_init.py  db_orders.py  db_utils.py
tests/: conftest.py  helpers.py  test.json  test_db_init.py  test_orders.py
