[project]
name = "bar-payment-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Johan Palm",email = "johan.palm2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "qrcode (>=8.2,<9.0)"
]

[tool.poetry]
packages = [
    {include = "bar_payment_service", from = "src"},
    { include = "db_handling", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
